gap and bug fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -177,3 +177,53 @@ nav {
 //   }
   
   
+main {
+    padding: 1px;
+    // font-style: italic;
+  
+  .container {
+    background-color: black;
+    width: 1000px;
+    margin: 30px auto;
+  
+    display: grid;
+    grid-template-rows: 150px 150px;
+    grid-template-columns: 150px 150px 150px;
+
+    grid-row-gap: 10px;
+    grid-column-gap: 50px;
+  
+  }
+  
+  .item {
+    padding: 20px;
+    font-size: 30px;
+    font-family: sans-serif;
+    color: white;
+  
+    &--1 {
+      background-color: #000000;
+    }
+  
+    &--2 {
+      background-color: #202020;
+    }
+  
+    &--3 {
+      background-color: #404040;
+    }
+  
+    &--4 {
+      background-color: #606060;
+    }
+  
+    &--5 {
+      background-color: #808080;
+    }
+  
+    &--6 {
+      background-color: #A0A0A0;
+    }
+  
+  }
+}
